<resources>
    <string name="app_name">CleverStudentApp</string>
    <string name="input_name">Enter your name</string>
    <string name="input_academy_institue">Enter your academic institue name</string>
    <string name="signin_btn">Sign In</string>
    <string name="setSession_btn">Set up a learning session</string>
    <string name="hello_text">"Hi, "</string>
    <string name="perform_txt">what would you like to perform?</string>
    <string name="addfriends_btn">Add Friends</string>
    <string name="submit_txt">Submit</string>
    <string name="record_txt">Record  message</string>
    <string name="writeSomething_txt">Write something here..</string>
    <string name="photo_options">Take photo from?</string>
    <string name="camera_choose">Camera</string>
    <string name="gallery_choose">Gallery</string>
    <string name="cancel_choose">Cancel</string>
    <string name="imageResource_title">Choose image import resource</string>
    <string name="add_button">Add</string>
    <string name="navigate_txt">Navigate to my academic institue</string>
    <string name="contact_us_txt">Contact us</string>
    <string name="mail_subject">Subject</string>
    <string name="mail_address">Your mail address</string>
    <string name="mail_instructions">Fill in the form below and we will get back to you ASAP</string>
    <string name="mail_sender_name">Name</string>
    <string name="sentby_txt">Sent by</string>
    <string name="create_event">Create new event</string>
    <string name="change_picture">Change picture</string>
    <string name="empty_message_error">Sorry but you cant send an empty message!</string>
    <string name="no_added_friends_message_error">"Sorry but you first have to add friends for sending message! "</string>
    <string name="sms_successfully_sent">SMS send has been successfully!</string>
    <string name="sms_failed_error">SMS failed, please try again later!</string>
    <string name="no_friends_added_question">You didnt even picked 1 friend? :(</string>
    <string name="amount_friends_added">Friends has been added! ready to send the message to your friends? :)</string>
    <string name="gotoSettings">Go to App Settings?</string>
    <string name="permissionsRequired">Sorry, permissions are required to complete the task Would you like to go to app settings?</string>
    <string name="yes_permissions">Yes, lets change the permissions</string>
    <string name="no_permissions">Not this time..</string>
    <string name="fill_form_message">Please fill the forms above!</string>

</resources>
