<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/skystars1">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:id="@+id/hellouser_text"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setSession_btn"
        android:background="@drawable/button_background"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/white"
        android:id="@+id/setSession_btn"
        />

    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_event"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:id="@+id/calender_btn"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigate_txt"
        android:background="@drawable/button_background"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:layout_marginTop="40dp"
        android:id="@+id/navigate_btn"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_us_txt"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_background"
        android:textColor="@android:color/white"
        android:layout_marginTop="40dp"
        android:id="@+id/contact_us_btn"
        />

</LinearLayout>